# fastorch

./: .gitignore  Makefile  README.md  requirements.txt
data/: mobile.py  resnet.py
docker/: cpu.Dockerfile
lib/torch/: build-version
script/: clean.sh  init.sh  onnx.sh
server/: CMakeLists.txt  base64.cpp  base64.hpp  build.sh  compile.sh  crow.hpp  main.cpp  serve.sh
tests/: ping.py  test_server.py
