cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(server)

find_package(Torch REQUIRED)
find_package(OpenCV REQUIRED)
find_package(Boost REQUIRED COMPONENTS system thread)
find_path(ONNX_RUNTIME_SESSION_INCLUDE_DIRS onnxruntime_cxx_api.h HINTS /usr/local/lib/onnx/include)
find_library(ONNX_RUNTIME_LIB onnxruntime HINTS /usr/local/lib/onnx/lib)

include_directories(${Boost_INCLUDE_DIRS})
include_directories(${ONNX_RUNTIME_SESSION_INCLUDE_DIRS})
include_directories(deps/b64)
add_executable(server main.cpp base64.cpp)
target_link_libraries(server ${TORCH_LIBRARIES})
target_link_libraries(server ${OpenCV_LIBS})
target_link_libraries(server ${Boost_SYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY})
target_link_libraries(server ${ONNX_RUNTIME_LIB})
set_property(TARGET server PROPERTY CXX_STANDARD 20)
set_property(TARGET server PROPERTY OUTPUT_NAME predict)
